--- a/JavaScript-M3/dia-5/index.html
+++ b/JavaScript-M3/dia-5/index.html
@@ -29,6 +29,23 @@
         />
       </div>
     </nav>
+    <!-- Barra Search -->
+    <section class="mt-5 d-md-none d-ms-block">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <form class="d-flex" role="search">
+              <input
+                class="form-control me-2"
+                type="search"
+                placeholder="🔍 Buscar Vehiculo"
+                aria-label="Search"
+              />
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Hero -->
     <section class="mt-5">
       <div class="container">
@@ -90,7 +107,7 @@
       </div>
     </section>
     <!-- Barra Search -->
-    <section class="mt-5">
+    <section class="mt-5 d-none d-md-block">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -120,40 +137,37 @@
             </div>
           </div>
           <div class="col-md-3">
-            <div class="card shadow-sm rounded-4 p-3" style="width: 22rem;">
-  
-  <!-- Header -->
-  <div class="d-flex justify-content-between align-items-start">
-    <div>
-      <h5 class="mb-0 fw-bold">Koenigsegg</h5>
-      <small class="text-muted">Sport</small>
-    </div>
-    <span class="text-danger fs-4">❤</span>
-  </div>
+            <div class="card shadow-sm rounded-4 p-3" style="width: 22rem">
+              <!-- Header -->
+              <div class="d-flex justify-content-between align-items-start">
+                <div>
+                  <h5 class="mb-0 fw-bold">Koenigsegg</h5>
+                  <small class="text-muted">Sport</small>
+                </div>
+                <span class="text-danger fs-4">❤</span>
+              </div>
 
-  <!-- Imagen -->
-  <div class="text-center my-3">
-    <img src="./img/img/Car (1).png" class="img-fluid" alt="Car">
-  </div>
+              <!-- Imagen -->
+              <div class="text-center my-3">
+                <img src="./img/img/Car (1).png" class="img-fluid" alt="Car" />
+              </div>
 
-  <!-- Info -->
-  <div class="d-flex justify-content-between text-muted small mb-3">
-    <span>⛽ 90L</span>
-    <span>⚙ Manual</span>
-    <span>👥 2 People</span>
-  </div>
+              <!-- Info -->
+              <div class="d-flex justify-content-between text-muted small mb-3">
+                <span>⛽ 90L</span>
+                <span>⚙ Manual</span>
+                <span>👥 2 People</span>
+              </div>
 
-  <!-- Footer -->
-  <div class="d-flex justify-content-between align-items-center">
-    <div>
-      <span class="fw-bold fs-5">$99.00</span>
-      <small class="text-muted">/day</small>
-    </div>
-    <a href="#" class="btn btn-primary rounded-3">Rent Now</a>
-  </div>
-
-</div>
-
+              <!-- Footer -->
+              <div class="d-flex justify-content-between align-items-center">
+                <div>
+                  <span class="fw-bold fs-5">$99.00</span>
+                  <small class="text-muted">/day</small>
+                </div>
+                <a href="#" class="btn btn-primary rounded-3">Rent Now</a>
+              </div>
+            </div>
           </div>
           <div class="col-md-3">
             <div class="card">
@@ -196,8 +210,8 @@
               <li><a href="">Podcast</a></li>
               <li><a href="">Invite a friend</a></li>
             </ul>
-         </div>
-        <div class="col-md-2">
+          </div>
+          <div class="col-md-2">
             <h4>Socials</h4>
             <ul>
               <li><a href="">Discord</a></li>
@@ -205,19 +219,19 @@
               <li><a href="">Twitter</a></li>
               <li><a href="">Facebook</a></li>
             </ul>
-      </div>
-      <hr class="col-md-12">
-      <div class="row">
-        <div class="col-md-8 ps-5">
-          <p>©2025 crudzaso. All rights reserved</p>
-        </div>
-        <div class="col-md-2 d-flex justify-content-end">
-            <p>Privacy & Policy</p>
-        </div>
-        <div class="col-md-2">
-            <p>Terms & Condition</p>
-        </div>
-        </div>
+          </div>
+          <hr class="col-md-12" />
+          <div class="row">
+            <div class="col-md-8 ps-5">
+              <p>©2025 crudzaso. All rights reserved</p>
+            </div>
+            <div class="col-md-2 d-flex justify-content-end">
+              <p>Privacy & Policy</p>
+            </div>
+            <div class="col-md-2">
+              <p>Terms & Condition</p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
