--- a/JavaScript-M3/javascriptCrud/index.html
+++ b/JavaScript-M3/javascriptCrud/index.html
@@ -19,7 +19,7 @@
             <div class="card">
               <div class="card-body">
                 <div class="mt-3">
-                    <h6 class="text-center pb-5">Formulario</h6>
+                  <h4 class="text-center pb-5">Formulario</h4>
                   <label>Nombre</label>
                   <input
                     type="text"
@@ -81,7 +81,81 @@
           </div>
         </div>
       </div>
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="exampleModal"
+        tabindex="-1"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel">
+                Udate User
+              </h1>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <div class="col-md-12">
+                <div class="card">
+                  <div class="card-body">
+                    <div class="mt-3">
+                      <label>Nombre</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        placeholder="Nombre"
+                        id="modal-name"
+                      />
+                    </div>
+
+                    <div class="mt-3">
+                      <label>Apellido</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        placeholder="Apellido"
+                        id="modal-lastname"
+                      />
+                    </div>
+
+                    <div class="mt-3">
+                      <label>Email</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        placeholder="Email"
+                        id="modal-email"
+                      />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-bs-dismiss="modal"
+              >
+                Close
+              </button>
+              <button type="button" class="btn btn-primary" id="modalSave">
+                Save changes
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
